# 5sem-SP

lab3/: CMakeLists.txt  Lab-03b-client.c  Lab-03b-server.c
lab3/lab3/Laba3/: Laba3.sln
lab3/lab3/Laba3/Lab-03a-client/: Lab-03a-client.c  Lab-03a-client.vcxproj  Lab-03a-client.vcxproj.filters
lab3/lab3/Laba3/Lab-03a-client/x64/Debug/: Lab-03a-client.exe.recipe  Lab-03a-client.ilk  vc143.idb
lab3/lab3/Laba3/Lab-03a-client/x64/Debug/Lab-03a-client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab-03a-client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab3/lab3/Laba3/Lab-03a-server/: Lab-03a-server.vcxproj  Lab-03a-server.vcxproj.filters
lab3/lab3/Laba3/Lab-03a-server/x64/Debug/: Lab-03a-server.exe.recipe  Lab-03a-server.ilk  vc143.idb
lab3/lab3/Laba3/Lab-03a-server/x64/Debug/Lab-03a-server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
lab3/lab3/Laba3/Lab-03b-client/: Lab-03b-client.c  Lab-03b-client.vcxproj  Lab-03b-client.vcxproj.filters
lab3/lab3/Laba3/Lab-03b-client/x64/Debug/: Lab-03b-client.exe.recipe  Lab-03b-client.ilk  lab-03b-client.obj.enc  vc143.idb
lab3/lab3/Laba3/Lab-03b-server/: Lab-03b-server.c  Lab-03b-server.vcxproj  Lab-03b-server.vcxproj.filters
lab3/lab3/Laba3/Lab-03b-server/x64/Debug/: Lab-03b-server.exe.recipe  Lab-03b-server.ilk  vc143.idb
lab3/lab3/tasks/task1/: CMakeLists.txt  Lab-03a-server.c
lab3/lab3/tasks/task2/: CMakeLists.txt  Lab-03b-client.c  Lab-03b-server.c
(+437 files in other folders)
